# lab_1

./: .gitignore  EC1.py  P1.py  Recursion.py  lab_4_test.py  p1_random.py  pyproject.toml
Lab9/: cow.py  cowsay.py  dragon.py  heifer_generator.py  ice_dragon.py
Labs/: Lab10.py  Lab11.py  Lab1_A.py  Lab1_B.py  Lab1_C.py  Lab2_A.py  Lab2_B.py  Lab2_C.py  Lab3.py  Lab4.py  Lab5.py  Lab6.py  Lab7.py  course_data.py  cow.py  cowsay.py  heifer_generator.py
project1/: P1.py  p1_random.py
project2/: P2_A.py  P2_B.py  P2_C.py  console_gfx.py
project3/: pakudex.py  pakuri.py  pakuri_program.py
