[tool.poetry]
name = "coding-class"
version = "0.1.0"
description = ""
authors = ["Sungho Baek <ashsh0412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
